Gray-Space/src/objects/CH_Hospital__c.object
<CustomObject>
    <fields>
        <fullName>CH_City__c</fullName>
        <label>City</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Fax_Number__c</fullName>
        <label>Fax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Helicopter_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Helicopter Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_No_Ambulances__c</fullName>
        <label>No. Ambulances</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CH_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Street__c</fullName>
        <label>Street</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Hospital</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CH_No_Ambulances__c</columns>
        <columns>CH_Helicopter_Access__c</columns>
        <columns>CH_City__c</columns>
        <columns>CH_Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hospital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>